--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-      <h1>النورين - جودة وأناقة في كل منتج</h1>
+      <!-- <h1>النورين - جودة وأناقة في كل منتج</h1> -->
       <p>اكتشف مجموعتنا المميزة من التيشيرتات والسجاد والحقائب</p>
     </section>
 
