--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <button class="category-btn" data-category="accessories">
           مدالية - علاقة للسيارة
         </button>
+        <button class="category-btn" data-category="book">فواصل كتب</button>
       </div>
     </section>
 
