--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           سجادة صلاة صغيرة
         </button>
         <button class="category-btn" data-category="stickers">
-          ستيكرات معدن
+          لاصق معدني
         </button>
         <button class="category-btn" data-category="accessories">
           مدالية - علاقة للسيارة
