--- a/index.html
+++ b/index.html
@@ -167,17 +167,19 @@
           <div class="form-group">
             <label for="area">المنطقة *</label>
             <div class="input-with-icon">
-              <input
+              <select
                 type="text"
                 id="area"
                 name="area"
                 required
                 autocomplete="off"
                 placeholder="ابدأ بكتابة اسم المنطقة..."
-              />
-              <i class="fas fa-search input-icon"></i>
+              >
+                <option value="">اختر المنطقة</option>
+              </select>
+              <!-- <i class="fas fa-search input-icon"></i> -->
             </div>
-            <div id="areaDropdown" class="area-dropdown"></div>
+            <!-- <div id="areaDropdown" class="area-dropdown"></div> -->
           </div>
 
           <div class="form-group">
